# fairino-moveit2

./: .env  .gitignore  README.md  readme.md
configured-fr-ws/src/fairino5_v6_moveit2_config/config/: moveit_controllers.yaml
frg_gripp_int_ws/src/fairino_gripper_integrated_desc/: package.xml
moveit/: README.md
moveit-cobot-integration/: README.md
moveit-gripper-integration/: README.md
moveit-gripper-integration-2/: README.md
moveit-gripper-integration-2/frg_gripp_int_ws/src/fairino5_v6_moveit2_config/: .setup_assistant
moveit-gripper-integration-3/: README.md
moveit-gripper-integration/frg_gripp_int_ws/src/fairino_gripper_integrated_desc/: CMakeLists.txt
moveit-gripper-integration/frg_gripp_int_ws/src/fairino_gripper_integrated_desc/urdf/: integrated.urdf.xacro
moveit2-gripper-integration/: README.md
src/fairino5_v6_moveit2_config/: .setup_assistant  package.xml
src/fairino5_v6_moveit2_config/config/: fairino_gripper_integrated_desc.ros2_control.xacro  fairino_gripper_integrated_desc.srdf  fairino_gripper_integrated_desc.urdf.xacro  fairino_with_ag95.ros2_control.xacro  fairino_with_ag95.srdf  fairino_with_ag95.urdf.xacro  initial_positions.yaml  moveit_controllers.yaml
src/fairino5_v6_moveit2_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/fairino_gripper_integrated_desc/: CMakeLists.txt  package.xml
src/fairino_gripper_integrated_desc/urdf/: integrated.urdf.xacro
(+18 files in other folders)
