<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fairino_gripper_integrated_desc</name>
  <version>1.0.0</version>
  <description>Integrated description for Fairino5 v6 with DH-AG95 gripper</description>
  <maintainer email="hady@todo.todo">Hady</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>				
